Fixed white width boundary Recoloured to navy and pink Aligned main body box and text

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background-color: pink;
 }
 
 .titlecontainer {
@@ -15,14 +14,14 @@
 
 .topbar {
     display: flex;
-    background-color: rgb(17, 63, 31);
-    width: 100%;
+    background-color: #1a2336;
     padding-left: 25px;
     padding-top: 5px;
     padding-bottom: 5px;
     gap: 10px;
     font-size: 10px;
-    justify-content: space-between
+    justify-content: space-between;
+    color: white;
 }
 
 .headerlogo {
@@ -38,22 +37,57 @@
     gap: 10px;
     margin-top: 20px;
     margin-left: 90px;
-    
+        
 }
+
+.suckmydick {
+    display: flex;
+    font-size: 20px;
+    color: aliceblue;
+    background-color: #1a2336;
+    height: 150px;
+    width: 500px;
+    margin-top: 35px;
+    margin-right: 60px;
+    justify-content: center;
+    align-items: center;
+}
+
+.firstparagraph {
+    width: 80%
+
+}
+
+
 #firstmain {
     display: flex;
-    background-color: rgb(17, 63, 31);
+    background-color: #5f1632;
     padding-bottom: 100px;
     width: 100%;
+    
+        
 }
 #signup {
-    background-color: white;
-    width: 10%;
+    width: 15%;
+    border: 10px;
+    border-color: rgb(209, 25, 86);
+    border-radius: 15%;
+    background-color: #1a2336;
+    padding: 12px;
+    color: white;
+}
+
+#signup:hover {
+    background-color: #331320;
+}
+
+.test {
+    display: flex;
+    
 
 }
 
 .titlelink:hover {
-    color: rgb(17, 63, 31);
-
+    color: #1a2336
 }
 
